[workspace]
members = [
  "libs/auth",
  "libs/macros",
  "libs/main-db",
  "libs/protobuf",
  "libs/utilities",
  "apps/compilers",
  "apps/executor",
  "apps/orchestrator",
]

[workspace.dependencies]
async-graphql = { version = "5.0.3", features = ["log", "uuid"] }
async-graphql-rocket = { version = "5.0.3" }
async-trait = { version = "0.1.57" }
chrono = { version = "0.4.22" }
duct = { version = "0.13.5" }
edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust.git", branch = "master" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust.git", branch = "master" }
edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust.git", branch = "master" }
rand = { version = "0.8.5" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85" }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.21.1", features = ["rt", "macros", "rt-multi-thread"] }
tonic = { version = "0.8" }
uuid = { version = "1.1.2", features = ["serde"] }
env_logger = { version = "0.9.1" }
log = { version = "0.4.17" }

[profile.release]
strip = true      # automatically strip symbols from the binary
lto = true        # instructs the linker to optimize at the link stage
opt-level = "z"   # optimize for size
codegen-units = 1 # allow for maximum size reduction optimizations
panic = "abort"   # removes the extra unwinding code
