[tool.poetry]
name = "codefarem"
version = "0.0.0"
description = "The python services for codefarem"
authors = ["Diptesh Choudhuri <ignisda2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = { version = "^22.10.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
