[package]
name = "compilers"
version = "0.1.0"
edition = "2021"
description = "This crate is responsible for compiling the source code into webassembly"

[dependencies]
duct = "0.13.5"
env_logger = { workspace = true }
log = { workspace = true }
macros = { path = "../../libs/macros" }
protobuf = { path = "../../libs/protobuf" }
tokio = { workspace = true }
tonic = { workspace = true }
utilities = { path = "../../libs/utilities" }

[[bin]]
name = "cpp-compiler"
path = "src/bin/cpp.rs"

[[bin]]
name = "go-compiler"
path = "src/bin/go.rs"

[[bin]]
name = "rs-compiler"
path = "src/bin/rs.rs"
