[package]
name = "compilers"
version = "0.1.0"
edition = "2021"
description = "This crate is responsible for compiling the source code into webassembly"

[dependencies]
macros = { path = "../../libs/macros" }
protobuf = { path = "../../libs/protobuf" }
utilities = { path = "../../libs/utilities" }

duct = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
utilities = { path = "../../libs/utilities" }

[[bin]]
name = "cpp-compiler"
path = "src/bin/cpp.rs"

[[bin]]
name = "go-compiler"
path = "src/bin/go.rs"

[[bin]]
name = "rs-compiler"
path = "src/bin/rs.rs"

[[bin]]
name = "zig-compiler"
path = "src/bin/zig.rs"

[[bin]]
name = "c-compiler"
path = "src/bin/c.rs"

[[bin]]
name = "python-compiler"
path = "src/bin/python.rs"

[[bin]]
name = "swift-compiler"
path = "src/bin/swift.rs"
