[package]
name = "executor"
version = "0.1.0"
edition = "2021"
description = "This crate is responsible for executing webassembly"


[dependencies]
duct = "0.13.5"
env_logger = "0.9.1"
log = "0.4.17"
macros = { path = "../../libs/macros" }
protobuf = { path = "../../libs/protobuf" }
tokio = { workspace = true }
tonic = { workspace = true }
utilities = { path = "../../libs/utilities" }
