[package]
name = "executor"
version = "0.1.0"
edition = "2021"
description = "This crate is responsible for executing webassembly"


[dependencies]
protobuf = { path = "../../libs/protobuf" }
utilities = { path = "../../libs/utilities" }

duct = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
