[package]
name = "farem-main"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-graphql = "4.0.13"
async-graphql-rocket = "4.0.13"
domains = { path = "../../libs/domains" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
edgedb-tokio = "0.3.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
surf = { version = "2.3.2", features = ["hyper-client"] }
tokio = { version = "1.21.1", features = ["rt", "macros"] }
