[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-graphql = { workspace = true }
async-graphql-rocket = "4.0.13"
async-trait = { workspace = true }
auth = { path = "../../libs/auth" }
config = { path = "../../libs/config" }
derive-getters = "0.2.0"
dotenv = "0.15.0"
edgedb-derive = { workspace = true }
edgedb-protocol = { workspace = true }
edgedb-tokio = { workspace = true }
figment = { version = "0.10.7", features = ["env"] }
macros = { path = "../../libs/macros" }
protobuf = { path = "../../libs/protobuf" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
utilities = { path = "../../libs/utilities" }
