[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path = "../../libs/auth" }
macros = { path = "../../libs/macros" }
main_db = { path = "../../libs/main-db" }
protobuf = { path = "../../libs/protobuf" }
utilities = { path = "../../libs/utilities" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-rocket = { workspace = true }
comrak = "0.15.0"
chrono = { workspace = true }
derive-getters = { workspace = true }
dotenv = { workspace = true }
edgedb-derive = { workspace = true }
edgedb-protocol = { workspace = true }
edgedb-tokio = { workspace = true }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
jwks-client = "0.2.0"
