[package]
name = "orchestrator"
version = "0.0.0"
edition = "2021"

[dependencies]
auth = { path = "../../libs/auth" }
macros = { path = "../../libs/macros" }
main_db = { path = "../../libs/main-db" }
protobuf = { path = "../../libs/protobuf" }
utilities = { path = "../../libs/utilities" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
derive-getters = { workspace = true }
dotenv = { workspace = true }
once_cell = { workspace = true }
edgedb-derive = { workspace = true }
edgedb-protocol = { workspace = true }
edgedb-tokio = { workspace = true }
env_logger = { workspace = true }
jwks-client = "0.2.0"
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
axum = "0.6.1"
async-graphql-axum = "5.0.5"
