[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "8.1.1"
serde = { workspace = true }
strum = { workspace = true }
thiserror = "1.0.37"
utilities = { path = "../utilities" }
uuid = { workspace = true }
