[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
chrono = { workspace = true }
edgedb-derive = { workspace = true }
edgedb-protocol = { workspace = true }
edgedb-tokio = { workspace = true }
figment = { version = "0.10.8", features = ["env"] }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slug = "0.1.4"
strum = { workspace = true }
uuid = { workspace = true }
