[package]
name = "utilities"
version = "0.0.0"
edition = "2021"

[dependencies]
protobuf = { path = "../protobuf" }

async-graphql = { workspace = true }
chrono = { workspace = true }
edgedb-derive = { workspace = true }
edgedb-protocol = { workspace = true }
edgedb-tokio = { workspace = true }
figment = { version = "0.10.8", features = ["env"] }
log = { workspace = true }
once_cell = "1.16.0"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slug = "0.1.4"
strum = { workspace = true }
uuid = { workspace = true }
