[package]
name = "utilities"
version = "0.0.0"
edition = "2021"

[dependencies]
protobuf = { path = "../protobuf" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
derive-getters = { workspace = true }
edgedb-derive = { workspace = true }
edgedb-protocol = { workspace = true }
edgedb-tokio = { workspace = true }
figment = { version = "0.10.8", features = ["env"] }
log = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = "2.2.1"
slug = "0.1.4"
strum = { workspace = true }
uuid = { workspace = true }
