[package]
name = "admin_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
utilities = { path = "../../../libs/utilities" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { version = "5.0.3" }
dotenv = { workspace = true }
edgedb-tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
axum = { version = "0.6.1" }
tokio = { workspace = true }
