[package]
name = "admin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
mailer = { path = "../../../libs/mailer" }
macros = { path = "../../../libs/macros" }
utilities = { path = "../../../libs/utilities" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { version = "5.0.3" }
axum = { version = "0.6.1" }
chrono = { workspace = true }
derive-getters = { workspace = true }
dotenv = { workspace = true }
edgedb-tokio = { workspace = true }
edgedb-derive = { workspace = true }
edgedb-protocol = { workspace = true }
env_logger = { workspace = true }
figment = { workspace = true }
lettre = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
humantime = "2.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.3.5", features = ["cors"] }
